# BabyNet

./: .gitignore  README.md  config.xml  pyproject.toml
baby_net/: config.json  tasks.json
notebooks/: Get Baby Images.ipynb
